--- a/src/components/cards/gameCard/gameCard.module.css
+++ b/src/components/cards/gameCard/gameCard.module.css
@@ -8,6 +8,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 
 .title {
@@ -36,3 +37,21 @@
     font-weight: 700;
     text-transform: uppercase;
 }
+
+@media (max-width: 700px) {
+    .image {
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+    }
+
+    .gamecard {
+        flex-direction: column;
+    }
+
+    .pricing {
+        flex-direction: column;
+    }
+
+}
+
