--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -10,3 +10,14 @@
 .search {
     min-width: 400px;
 }
+
+@media (max-width: 700px) {
+    .nav {
+        padding: 0 20px;
+    }
+
+    .search {
+        min-width: auto;
+    }
+
+}
