--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -6,8 +6,11 @@
     margin-top: 20px;
     display: flex;
     justify-content: space-between;
-    gap: 8px;
+    gap: 20px;
+    flex-wrap: wrap;
 }
+
+
 
 .gameconteiner {
     margin-top: 20px;
@@ -15,4 +18,10 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 20px;
+}
+
+@media (max-width: 850px) {
+    .saleconteiner {
+        justify-content: center;
+    }
 }
